<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/selection3"
        android:orderInCategory="3"
        android:title="@string/selections_3"
        app:showAsAction="never" />

    <item
        android:id="@+id/selection4"
        android:orderInCategory="4"
        android:title="@string/selections_4"
        app:showAsAction="never" />

    <item
        android:id="@+id/selection5"
        android:orderInCategory="5"
        android:title="@string/selections_5"
        app:showAsAction="never" />

    <item
        android:id="@+id/selection6"
        android:orderInCategory="6"
        android:title="@string/selections_6"
        app:showAsAction="never" />

    <item
        android:id="@+id/selection7"
        android:orderInCategory="7"
        android:title="@string/selections_7"
        app:showAsAction="never" />

    <item
        android:id="@+id/selection8"
        android:orderInCategory="8"
        android:title="@string/selections_8"
        app:showAsAction="never" />

    <item
        android:id="@+id/selection9"
        android:orderInCategory="9"
        android:title="@string/selections_9"
        app:showAsAction="never" />

</menu>
